--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -1,25 +1,127 @@
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap');
-
+:root{
+    --color1:#F3F3E0; /*main*/
+    --color2:#133E87; /*font*/
+    --color3:#608BC1; /*footer*/
+    --color4:#CBDCEB; /*header*/
+}
 *{
     padding: 0;
     margin: 0;
     box-sizing: border-box;
     font-family: 'Open Sans', sans-serif;
+    color: var(--color2)
 }
 
 .header{
     grid-area: header;
-    border: 1px solid red;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    background-color: var(--color4);
+}
+
+.header-sector{
+    display: flex;
+    align-items: center;
+    gap: 1rem;
+}
+
+.nav{
+    display: none;
 }
 
 .main{
     grid-area: main;
-    border: 1px solid red;
+    background-color: var(--color1);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.order-by{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding: 1rem;
+}
+
+.order-by select{
+    width: 90vw;
+    height: 5vh;
+}
+
+.productos{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 80vh;
+}
+
+.card{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: start;
+    gap: 1rem;
+    padding: 1rem;
+    box-shadow: 1px 2px 3px rgba(0, 0, 0, 0.6);
+}
+
+.fuera-pagina{
+    display: none;
+}
+
+.card img{
+    width: 300px;
+    height: 250px;
+}
+
+.card button{
+    background-color: var(--color3);
+    color: var(--color1);
+    padding: 1rem;
+    border-radius: 5px;
+}
+
+.paginas{
+    display: flex;
+    margin: 2rem;
+}
+
+.pagina{
+    border: solid 1px var(--color2);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 1rem;
+}
+
+.pagina-inicio{
+    border: solid 1px var(--color2);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 1rem;
+}
+
+.pagina-termino{
+    border: solid 1px var(--color2);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 1rem;
 }
 
 .footer{
     grid-area: footer;
-    border: 1px solid red;
+    background-color: var(--color3);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    
 }
 
 .contenedor{
